@@ -73,7 +73,7 @@ utility exits with 0 on success, 1 on error.
 .Sh SEE ALSO
 .Lk http://code.google.com/p/thtk "Project homepage"
 .Sh BUGS
-A few files from TH12 contain overlapping entries with different formats.
+A few files from TH12 and TH13 contain overlapping entries with different formats.
 Dumping and recreating these archives will not result in the same archives.
 The affected pixels seem to all have 0 for alpha though.
 .Pp
